# native-theme

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-0BSD  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  dev-env-update.sh  pre-release-check.sh
.cargo/: audit.toml
.claude/: gsd-file-manifest.json
.codex/: gsd-file-manifest.json
.codex/agents/: gsd-debugger.toml  gsd-executor.toml  gsd-phase-researcher.toml  gsd-plan-checker.toml  gsd-planner.toml  gsd-project-researcher.toml  gsd-research-synthesizer.toml  gsd-roadmapper.toml  gsd-verifier.toml
.gemini/: gsd-file-manifest.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  screenshots.yml
.opencode/: gsd-file-manifest.json  opencode.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v0.1-MILESTONE-AUDIT.md  v0.1-REQUIREMENTS.md  v0.1-ROADMAP.md  v0.3-REQUIREMENTS.md  v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  NATIVE-ICONS.md  PITFALLS.md  STACK.md  SUMMARY.md
connectors/native-theme-gpui/: Cargo.toml  README.md
connectors/native-theme-gpui/examples/: showcase-gpui.rs  showcase.rs
connectors/native-theme-gpui/proposals/: README.md
connectors/native-theme-gpui/src/: colors.rs  config.rs  derive.rs  icons.rs  lib.rs
connectors/native-theme-iced/: Cargo.toml  README.md
connectors/native-theme-iced/examples/: demo.rs  showcase-iced.rs  showcase.rs
connectors/native-theme-iced/src/: extended.rs  icons.rs  lib.rs  palette.rs
connectors/native-theme-iced/tests/: integration.rs
docs/: IMPLEMENTATION.md  animated-icons.md  custom-icon-roles.md  extra-icons.md  inheritance-rules.toml  native-icons.md  new-os-version-guide.md  platform-facts.md  property-registry.toml  todo.md  todo_v0.4.1.md  todo_v0.5.1_gpui-connector-API.md  todo_v0.5.1_iced-connector-API.md  todo_v0.5.1_inheritance-rules.md  todo_v0.5.1_native-theme-API.md  todo_v0.5.1_resolution.md  todo_v0.5.1_theme-variant.md  todo_v0.5.2.md  todo_v0.5.2_iced-full-theme-geometry.md  todo_v0.5.2_native-theme-build_api.md  todo_v0.5.2_native-theme-gpui_api.md  todo_v0.5.2_native-theme_bugfix.md  todo_v0.5.3_iced-full-theme-geometry.md  todo_v0.5.3_native-theme-build.md  todo_v0.5.3_native-theme-gpui.md  todo_v0.5.3_native-theme-iced.md  todo_v0.5.4_native-theme-build.md  todo_v0.5.4_native-theme-gpui.md  todo_v0.5.4_native-theme-iced.md  todo_v0.5.4_native-theme.md  todo_v0.5.5.md  todo_v0.5.5_pt-px.md  todo_v0.5.6_break-up-lib-rs.md  todo_v0.5.6_gtk-icon-theme.md  todo_v0.5.6_platform-reader-testing.md  todo_v0.5.6_runtime-theme-change.md  todo_v0.5.6_validate-derive-macro.md  todo_v0.5.7_gaps.md  todo_v0.5.7_icon-theme.md  todo_v0.5.7_native-theme-api-2.md  (+7 more)
docs/archive/: todo_v0.4.1.md  v0.2.0-stale-publish-plan.md  v0.3.2-quality-improvements.md  v0.4.0-finalize.md  v0.4.1.md  v0.5.0_inheritance-rules.md  v0.5.0_resolution.md  v0.5.0_theme-variant.md  v0.5.1_gpui-connector-API.md  v0.5.1_iced-connector-API.md  v0.5.1_native-theme-API.md  v0.5.1_native-theme-build-API.md  v0.5.2_native-theme-build_api.md  v0.5.2_native-theme-gpui_api.md  v0.5.2_native-theme-iced_api.md  v0.5.2_native-theme_api.md  v0.5.3_native-theme-build.md  v0.5.3_native-theme-gpui.md  (+11 more)
native-theme/: Cargo.toml  README.md  proptest.toml
native-theme-build/: Cargo.toml  README.md
native-theme-build/src/: codegen.rs  error.rs  lib.rs  schema.rs  validate.rs
native-theme-build/tests/: integration.rs
native-theme-build/tests/fixtures/: sample-icons.toml
native-theme-build/tests/fixtures/freedesktop/: mapping.toml
native-theme-build/tests/fixtures/lucide/: mapping.toml
native-theme-build/tests/fixtures/material/: mapping.toml
native-theme-build/tests/fixtures/segoe-fluent/: mapping.toml
native-theme-build/tests/fixtures/sf-symbols/: mapping.toml
native-theme-derive/: Cargo.toml  README.md
native-theme-derive/src/: gen_inherit.rs  gen_merge.rs  gen_ranges.rs  gen_structs.rs  gen_validate.rs  lib.rs  parse.rs
native-theme/src/: color.rs  detect.rs  error.rs  freedesktop.rs  icons.rs  lib.rs  macos.rs  pipeline.rs  prelude.rs  presets.rs  rasterize.rs  reader.rs  resolve.rs  sficons.rs  spinners.rs  test_util.rs  windows.rs  winicons.rs
native-theme/src/gnome/: mod.rs
native-theme/src/kde/: colors.rs  fonts.rs  metrics.rs  mod.rs
native-theme/src/model/: animated.rs  border.rs  bundled.rs  colors.rs  defaults.rs  dialog_order.rs  font.rs  fonts.rs  geometry.rs  icon_sizes.rs  icons.rs  mod.rs  resolved.rs  spacing.rs  widget_metrics.rs
native-theme/src/model/widgets/: mod.rs
native-theme/src/presets/: README.md  adwaita-live.toml  adwaita.toml  catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  default.toml  dracula.toml  gruvbox.toml  ios.toml  kde-breeze-live.toml  kde-breeze.toml  macos-sonoma-live.toml  macos-sonoma.toml  material.toml  nord.toml  one-dark.toml  solarized.toml  tokyo-night.toml  windows-11-live.toml  windows-11.toml
native-theme/src/resolve/: context.rs  inheritance.rs  mod.rs  tests.rs  validate.rs  validate_helpers.rs
native-theme/src/watch/: gnome.rs  kde.rs  macos.rs  mod.rs  windows.rs
native-theme/tests/: merge_behavior.rs  platform_facts_xref.rs  prelude_smoke.rs  preset_loading.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  reader_kde.rs  resolve_and_validate.rs  serde_roundtrip.rs
native-theme/tests/fixtures/kde/: breeze-dark.ini  breeze-light.ini  custom-accent.ini  high-dpi.ini  malformed-values.ini  minimal.ini  missing-groups.ini
scripts/: README.md  generate_assets.sh  generate_gifs.py  generate_gpui_screenshots.sh  generate_screenshots.sh  generate_spinner_frames.py  generate_theme_switching_gif.sh  pre-release.sh  render-diagrams.sh
src/: color.rs  error.rs  lib.rs  presets.rs  windows.rs
tests/: preset_loading.rs
(+417 files in other folders)
