[workspace]
members = [
    "native-theme",
    "connectors/native-theme-gpui",
    "connectors/native-theme-iced",
]
resolver = "3"

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0 OR 0BSD"
rust-version = "1.94.0"
repository = "https://github.com/nickelpack/native-theme"
homepage = "https://github.com/nickelpack/native-theme"
keywords = ["theme", "gui", "native", "colors", "desktop"]
categories = ["gui", "config", "os"]

[workspace.dependencies]
native-theme = { path = "native-theme", version = "0.3.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.17.0"
toml = "1.0.6"

# Optimize dependencies in dev builds for usable UI performance
[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1
