[workspace]
members = [
    "native-theme",
    "native-theme-build",
    "native-theme-derive",
    "connectors/native-theme-gpui",
    "connectors/native-theme-iced",
]
resolver = "3"

[workspace.package]
version = "0.5.7"
edition = "2024"
license = "MIT OR Apache-2.0 OR 0BSD"
rust-version = "1.94.0"
repository = "https://github.com/tiborgats/native-theme"
homepage = "https://github.com/tiborgats/native-theme"
keywords = ["theme", "gui", "native", "colors", "desktop"]
categories = ["gui", "config", "os"]

[workspace.dependencies]
native-theme = { path = "native-theme", version = "0.5.7" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_with = "3.18.0"
toml = "1.1.2"

# Optimize dependencies in dev builds for usable UI performance
[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1
