[package]
name = "native-theme-build"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Build-time code generation for native-theme custom icon roles"
repository.workspace = true
homepage.workspace = true
keywords = ["theme", "icons", "codegen", "build", "gui"]
categories = ["development-tools::build-utils", "gui"]

[dependencies]
toml = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
heck = "0.5"

[dev-dependencies]
native-theme = { path = "../native-theme" }
