[package]
name = "native-theme-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc-macro derive for native-theme widget struct pairs"
readme = "README.md"
keywords = ["theme", "derive", "proc-macro", "gui", "widget"]
categories = ["gui", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
