[package]
name = "native-theme-gpui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "gpui toolkit connector for native-theme"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
native-theme = { workspace = true, features = ["material-icons", "lucide-icons", "system-icons"] }

[dev-dependencies]
gpui-component-assets = "0.5.1"

[[example]]
name = "showcase"
