[package]
name = "native-theme-gpui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["theme", "gpui", "gui", "native", "colors"]
categories = ["gui", "config"]
readme = "README.md"
description = "gpui toolkit connector for native-theme"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
native-theme = { workspace = true, features = ["material-icons", "lucide-icons", "system-icons", "svg-rasterize", "macos"] }

[dev-dependencies]
gpui-component-assets = "0.5.1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
objc2 = "0.5"

[[example]]
name = "showcase"
