[package]
name = "native-theme-iced"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["theme", "iced", "gui", "native", "colors"]
categories = ["gui", "config"]
readme = "README.md"
description = "iced toolkit connector for native-theme"

[dependencies]
native-theme.workspace = true
iced_core = "0.14"

[[example]]
name = "showcase"

[dev-dependencies]
iced = { version = "0.14", features = ["svg", "image", "tokio"] }
native-theme = { workspace = true, features = ["material-icons", "lucide-icons", "phosphor-icons"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
native-theme = { workspace = true, features = ["system-icons"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
objc2 = "0.5"
native-theme = { workspace = true, features = ["system-icons", "macos"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
native-theme = { workspace = true, features = ["system-icons", "windows"] }
windows = { version = ">=0.59, <=0.62", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }
