[package]
name = "native-theme-iced"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["theme", "iced", "gui", "native", "colors"]
categories = ["gui", "config"]
readme = "README.md"
description = "iced toolkit connector for native-theme"

[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[dependencies]
native-theme.workspace = true
iced_core = "0.14"

[[example]]
name = "showcase-iced"

[dev-dependencies]
iced = { version = "0.14", features = ["svg", "image", "tokio"] }
native-theme = { workspace = true, features = [
    "material-icons",
    "lucide-icons",
    "watch",
] }
image = { version = "0.25.10", default-features = false, features = ["png"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
native-theme = { workspace = true, features = ["system-icons", "linux"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
objc2 = "0.6.4"
native-theme = { workspace = true, features = ["system-icons", "macos"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
native-theme = { workspace = true, features = ["system-icons", "windows"] }
windows = { version = "0.62.2", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
